test_programs/compile_failure/noirc_frontend_tests_enums_missing_single_case/src/main.nr

        fn main() {
            match Opt::Some(3) {
                Opt::None => (),
            }
        }

        enum Opt<T> {
            None,
            Some(T),
        }
    